--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="SuKui's personal website."
+      content="SuKui. Contemporary Photographer, Artist. Her works focus on 'object'. 苏葵，摄影师、艺术家。她的作品都关注物"
     />
+    <meta name="keywords" content="SuKui, photography, art" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SuKui</title>
+    <title>SuKui | Photography | Art</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
